loader looked weird on iphone, checking if it works with a height fix

--- a/styling/projects.css
+++ b/styling/projects.css
@@ -13,6 +13,7 @@
   margin-top: 40%;
     width: 50px;
     padding: 8px;
+    height: 50px;
     aspect-ratio: 1;
     border-radius: 50%;
     background: #25b09b;
